test coverage extended